--- a/src/app/instaverse-app.component.scss
+++ b/src/app/instaverse-app.component.scss
@@ -1,3 +1,30 @@
 :host {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  font-family: 'Billabong', sans-serif;
+  font-size: 13px;
 
+  .app-header {
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 1px solid #dbdbdb;
+    border-top: 1px solid #dbdbdb;
+
+    .app-title {
+      font-size: 22px;
+      color: #262626;
+      margin: 0;
+      padding: 12px 0;
+    }
+  }
+
+  .main-content {
+    height: 100%;
+    width: 50%;
+    max-width: 975px;
+    margin: auto;
+  }
 }
