--- a/src/libs/feature-dialog/src/lib/feature-dialog.component.scss
+++ b/src/libs/feature-dialog/src/lib/feature-dialog.component.scss
@@ -1,4 +1,31 @@
 :host {
+
+  .upload-input {
+    border: 1px solid #e5e5e5;
+    margin-top: 10px;
+  }
+
+  .content {
+    padding-bottom: 5px;
+    padding-top: 5px;
+  }
+
+  input[type=file]::file-selector-button {
+    background-color: #fff;
+    color: #000;
+    border: 0;
+    border-right: 1px solid #e5e5e5;
+    padding: 10px 15px;
+    margin-right: 20px;
+    transition: .5s;
+  }
+
+  input[type=file]::file-selector-button:hover {
+    background-color: #eee;
+    border: 0;
+    border-right: 1px solid #e5e5e5;
+  }
+
   mat-dialog-actions {
     display: flex;
     justify-content: flex-end;
