INST profile data edit

--- a/src/libs/feature-profile-header/src/lib/feature-profile-header.component.scss
+++ b/src/libs/feature-profile-header/src/lib/feature-profile-header.component.scss
@@ -6,6 +6,10 @@
     margin-right: 80px;
   }
 
+  .profile-info-wrapper {
+    min-width: 705px;
+  }
+
   .profile-btns {
     display: flex;
     gap: 10px;
