--- a/src/libs/feature-photo-list/src/lib/feature-photo-list.component.scss
+++ b/src/libs/feature-photo-list/src/lib/feature-photo-list.component.scss
@@ -11,6 +11,18 @@
     padding: 0;
   }
 
+  .remove-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 20%;
+    color: rgba(114, 115, 119, 0.38);
+  }
+
+  .remove-hidden {
+    display: none;
+  }
+
   .cdk-drag-preview {
     box-sizing: border-box;
     border-radius: 4px;
