--- a/src/libs/feature-photo-list/src/lib/feature-photo-list.component.scss
+++ b/src/libs/feature-photo-list/src/lib/feature-photo-list.component.scss
@@ -23,6 +23,14 @@
     display: none;
   }
 
+  .spinner {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+  }
+
   .cdk-drag-preview {
     box-sizing: border-box;
     border-radius: 4px;
